--- a/lib/util/Makefile.in
+++ b/lib/util/Makefile.in
@@ -273,16 +273,16 @@ $(srcdir)/sys_signame.h: $(srcdir)/siglist.in
 	fi
 
 sys_siglist.i: $(srcdir)/sys_siglist.h
-	$(CPP) $(CPPFLAGS) $< > $@
+	$(CPP) $(CPPFLAGS) $(srcdir)/sys_siglist.h > $@
 
 sys_signame.i: $(srcdir)/sys_signame.h
-	$(CPP) $(CPPFLAGS) $< > $@
+	$(CPP) $(CPPFLAGS) $(srcdir)/sys_signame.h > $@
 
 mksiglist.h: sys_siglist.i
-	$(SED) -e '1,/^int sudo_end_of_headers;/d' -e '/^#/d' < $< > mksiglist.h
+	$(SED) -e '1,/^int sudo_end_of_headers;/d' -e '/^#/d' < sys_siglist.i > mksiglist.h
 
 mksigname.h: sys_signame.i
-	$(SED) -e '1,/^int sudo_end_of_headers;/d' -e '/^#/d' < $< > mksigname.h
+	$(SED) -e '1,/^int sudo_end_of_headers;/d' -e '/^#/d' < sys_signame.i > mksigname.h
 
 closefrom_test: $(CLOSEFROM_TEST_OBJS) libsudo_util.la
 	$(LIBTOOL) $(LTFLAGS) --mode=link $(CC) -o $@ $(CLOSEFROM_TEST_OBJS) libsudo_util.la $(ASAN_LDFLAGS) $(PIE_LDFLAGS) $(HARDENING_LDFLAGS) $(TEST_LDFLAGS) $(TEST_LIBS)
