Add pam_silent configuration setting
This commit adds a boolean setting 'pam_silent' that controls whether
sudo will pass PAM_SILENT to pam_authenticate(). The default for this
setting is 'true'.

When this setting is set to 'false', pam messages such as faillock
lockout message will be displayed, which is not the case for the
default.

--- a/examples/sudo.conf.in
+++ b/examples/sudo.conf.in
@@ -117,6 +117,16 @@
 #Set probe_interfaces false
 
 #
+# PAM verbosity:
+#   Set pam_silent true|false
+#
+# By default, sudo will call PAM's authentication in silent mode to reduce
+# messages printed on the terminal. This can however hide potentially
+# important messages such as the account lockout messages by pam_faillock.
+#
+#Set pam_silent true
+
+#
 # Sudo debug files:
 #   Debug program /path/to/debug_log subsystem@priority[,subsyste@priority]
 #
