--- a/docs/sudoers.man.in
+++ b/docs/sudoers.man.in
@@ -1,4 +1,4 @@
-.\" Automatically generated from an mdoc input file.  Do not edit.
+.\" Automatically generated from the sudoers.mdoc.in file.  Do not edit.
 .\"
 .\" SPDX-License-Identifier: ISC
 .\"
@@ -4420,7 +4420,7 @@ it will
 \(lqroll over\(rq
 to zero, after which
 \fBsudoers\fR
-will truncate and re-use any existing I/O log path names.
+will truncate and reuse any existing I/O log path names.
 .sp
 This setting is only supported by version 1.8.7 or higher.
 .TP 18n
@@ -6829,7 +6829,7 @@ Once the I/O log sequence number reaches
 \fImaxseq\fR,
 it will be reset to zero and
 \fBsudoers\fR
-will truncate and re-use any existing I/O logs.
+will truncate and reuse any existing I/O logs.
 .SH "FILES"
 .TP 26n
 \fI@sysconfdir@/sudo.conf\fR
@@ -7906,7 +7906,7 @@ If no terminal is present or the
 option is set to
 \(lqppid\(rq,
 the start time of the parent process is used instead.
-In most cases this will prevent a time stamp record from being re-used
+In most cases this will prevent a time stamp record from being reused
 without the user entering a password when logging out and back in again.
 .SH "DEBUGGING"
 Versions 1.8.4 and higher of the
